# sociaty_newsletter_generator

./: .gitignore  langchain_gen.ipynb  main.py  pyproject.toml  test.ipynb
output/: 2024-08-02-13-28-52_6697a91d6720e5b25ef7946b.md  2024-08-02-13-35-53_6697ab4a6720e5b25ef794d9.md  2024-08-02-13-36-39_6697ab766720e5b25ef795e2.md  2024-08-02-13-37-25_6697ad356720e5b25ef79605.md  2024-08-02-13-38-14_6697aec36720e5b25ef796fc.md  2024-08-02-13-39-14_6697b08c6720e5b25ef797e2.md  2024-08-02-13-39-56_66993bf59a3b5803097f77df.md  2024-08-02-13-40-57_669a345da02feb1858343077.md  2024-08-02-13-42-06_669e16804f5d02e9b56027c9.md  2024-08-02-13-42-55_669e1f654042a3dbb35f9484.md  2024-08-02-13-44-03_669f6cbd20d8c0fd9be0259f.md  2024-08-02-13-45-09_669f794b8f71f776cd33b021.md  2024_07_29_16_30_05_session_6697a91d6720e5b25ef7946b.md  2024_07_29_16_34_26_session_6697a91d6720e5b25ef7946b.md  2024_07_29_16_35_11_session_6697ab4a6720e5b25ef794d9.md  2024_07_29_16_43_40_session_6697ad356720e5b25ef79605.md  2024_07_29_16_43_55_session_6697aec36720e5b25ef796fc.md  2024_07_29_16_45_49_session_6697ad356720e5b25ef79605.md  2024_07_29_16_46_03_session_6697aec36720e5b25ef796fc.md  2024_07_29_16_46_20_session_6697b08c6720e5b25ef797e2.md  2024_07_29_16_46_32_session_66993bf59a3b5803097f77df.md  2024_07_29_16_46_53_session_669a345da02feb1858343077.md  2024_07_29_16_47_21_session_669e16804f5d02e9b56027c9.md  2024_07_29_16_47_43_session_669e1f654042a3dbb35f9484.md  2024_07_29_16_48_03_session_669f6cbd20d8c0fd9be0259f.md  2024_07_29_16_48_24_session_669f794b8f71f776cd33b021.md  2024_07_31_17_44_00.md  (+13 more)
(+6 files in other folders)
